# 5desc

./: Dockerfile  LICENSE  PKGBUILD  README.md  action.yml  build-marko.sh  fivedesc.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: main.yml
